[workspace]
resolver = "2"
exclude = [
  "docs/examples/rust",
  "examples/custom-indexer/rust",
  "examples/tic-tac-toe/cli",
  "external-crates/move/crates/bytecode-interpreter-crypto",
  "external-crates/move/crates/bytecode-verifier-libfuzzer",
  "external-crates/move/crates/bytecode-verifier-prop-tests",
  "external-crates/move/crates/bytecode-verifier-tests",
  "external-crates/move/crates/bytecode-verifier-transactional-tests",
  "external-crates/move/crates/enum-compat-util",
  "external-crates/move/crates/invalid-mutations",
  "external-crates/move/crates/language-benchmarks",
  "external-crates/move/crates/module-generation",
  "external-crates/move/crates/move-abstract-interpreter",
  "external-crates/move/crates/move-abstract-stack",
  "external-crates/move/crates/move-analyzer",
  "external-crates/move/crates/move-binary-format",
  "external-crates/move/crates/move-borrow-graph",
  "external-crates/move/crates/move-bytecode-source-map",
  "external-crates/move/crates/move-bytecode-utils",
  "external-crates/move/crates/move-bytecode-verifier",
  "external-crates/move/crates/move-bytecode-verifier-meter",
  "external-crates/move/crates/move-bytecode-viewer",
  "external-crates/move/crates/move-cli",
  "external-crates/move/crates/move-command-line-common",
  "external-crates/move/crates/move-compiler",
  "external-crates/move/crates/move-compiler-transactional-tests",
  "external-crates/move/crates/move-core-types",
  "external-crates/move/crates/move-coverage",
  "external-crates/move/crates/move-disassembler",
  "external-crates/move/crates/move-docgen",
  "external-crates/move/crates/move-docgen-tests",
  "external-crates/move/crates/move-ir-compiler",
  "external-crates/move/crates/move-ir-compiler-transactional-tests",
  "external-crates/move/crates/move-ir-to-bytecode",
  "external-crates/move/crates/move-ir-to-bytecode-syntax",
  "external-crates/move/crates/move-ir-types",
  "external-crates/move/crates/move-model",
  "external-crates/move/crates/move-model-2",
  "external-crates/move/crates/move-package",
  "external-crates/move/crates/move-package-alt",
  "external-crates/move/crates/move-proc-macros",
  "external-crates/move/crates/move-stackless-bytecode",
  "external-crates/move/crates/move-stdlib",
  "external-crates/move/crates/move-stdlib-natives",
  "external-crates/move/crates/move-symbol-pool",
  "external-crates/move/crates/move-trace-format",
  "external-crates/move/crates/move-transactional-test-runner",
  "external-crates/move/crates/move-unit-test",
  "external-crates/move/crates/move-vm-config",
  "external-crates/move/crates/move-vm-integration-tests",
  "external-crates/move/crates/move-vm-profiler",
  "external-crates/move/crates/move-vm-runtime",
  "external-crates/move/crates/move-vm-test-utils",
  "external-crates/move/crates/move-vm-transactional-tests",
  "external-crates/move/crates/move-vm-types",
  "external-crates/move/crates/serializer-tests",
  "external-crates/move/crates/test-generation",
  "sdk/move-bytecode-template",
]
members = [
  "consensus/config",
  "consensus/core",
  "consensus/simtests",
  "crates/bin-version",
  "crates/iota",
  "crates/iota-adapter-transactional-tests",
  "crates/iota-analytics-indexer",
  "crates/iota-analytics-indexer-derive",
  "crates/iota-archival",
  "crates/iota-authority-aggregation",
  "crates/iota-aws-orchestrator",
  "crates/iota-benchmark",
  "crates/iota-build-cache-server",
  "crates/iota-cluster-test",
  "crates/iota-common",
  "crates/iota-config",
  "crates/iota-core",
  "crates/iota-cost",
  "crates/iota-data-ingestion",
  "crates/iota-data-ingestion-core",
  "crates/iota-e2e-tests",
  "crates/iota-enum-compat-util",
  "crates/iota-faucet",
  "crates/iota-framework",
  "crates/iota-framework-snapshot",
  "crates/iota-framework-tests",
  "crates/iota-genesis-builder",
  "crates/iota-genesis-common",
  "crates/iota-graphql-config",
  "crates/iota-graphql-e2e-tests",
  "crates/iota-graphql-rpc",
  "crates/iota-graphql-rpc-client",
  "crates/iota-graphql-rpc-headers",
  "crates/iota-grpc-client",
  "crates/iota-grpc-server",
  "crates/iota-grpc-types",
  "crates/iota-http",
  "crates/iota-indexer",
  "crates/iota-indexer-builder",
  "crates/iota-indexer-streaming",
  "crates/iota-json",
  "crates/iota-json-rpc",
  "crates/iota-json-rpc-api",
  "crates/iota-json-rpc-tests",
  "crates/iota-json-rpc-types",
  "crates/iota-keys",
  "crates/iota-kvstore",
  "crates/iota-ledger",
  "crates/iota-ledger-signer",
  "crates/iota-light-client",
  "crates/iota-localnet",
  "crates/iota-macros",
  "crates/iota-mainnet-unlocks",
  "crates/iota-metric-checker",
  "crates/iota-metrics",
  "crates/iota-move",
  "crates/iota-move-build",
  "crates/iota-move-lsp",
  "crates/iota-names",
  "crates/iota-network",
  "crates/iota-network-stack",
  "crates/iota-node",
  "crates/iota-open-rpc",
  "crates/iota-open-rpc-macros",
  "crates/iota-package-alt",
  "crates/iota-package-dump",
  "crates/iota-package-management",
  "crates/iota-package-resolver",
  "crates/iota-proc-macros",
  "crates/iota-proto-build",
  "crates/iota-protocol-config",
  "crates/iota-protocol-config-macros",
  "crates/iota-proxy",
  "crates/iota-replay",
  "crates/iota-rest-api",
  "crates/iota-rest-kv",
  "crates/iota-rpc-loadgen",
  "crates/iota-sdk",
  "crates/iota-simulator",
  "crates/iota-single-node-benchmark",
  "crates/iota-snapshot",
  "crates/iota-source-validation",
  "crates/iota-source-validation-service",
  "crates/iota-stardust-types",
  "crates/iota-storage",
  "crates/iota-surfer",
  "crates/iota-swarm",
  "crates/iota-swarm-config",
  "crates/iota-synthetic-ingestion",
  "crates/iota-test-transaction-builder",
  "crates/iota-tls",
  "crates/iota-tool",
  "crates/iota-transaction-builder",
  "crates/iota-transaction-checks",
  "crates/iota-transactional-test-runner",
  "crates/iota-types",
  "crates/iota-upgrade-compatibility-transactional-tests",
  "crates/iota-verifier-transactional-tests",
  "crates/prometheus-closure-metric",
  "crates/simulacrum",
  "crates/simulacrum-server",
  "crates/starfish/config",
  "crates/starfish/core",
  "crates/starfish/simtests",
  "crates/telemetry-subscribers",
  "crates/test-cluster",
  "crates/transaction-fuzzer",
  "crates/typed-store",
  "crates/typed-store-derive",
  "crates/typed-store-error",
  "iota-execution",
  "iota-execution/cut",
  "iota-execution/latest/iota-adapter",
  "iota-execution/latest/iota-move-natives",
  "iota-execution/latest/iota-verifier",
]

[workspace.package]
# This version string will be inherited by iota-core, iota-faucet, iota-node, iota-tools, iota-sdk, iota-move-build, and iota crates.
version = "1.20.0-alpha"

[workspace.metadata.cargo-udeps.ignore]
normal = ["move-package-alt"]

[profile.release]
# debug = 1 means line charts only, which is minimum needed for good stack traces
debug = 1
# Exit process with SIGABRT when any thread panics
panic = 'abort'
# Write debug info into a separate file.
split-debuginfo = 'packed'
# Without stripping, iota binary size would be > 1GB.
strip = 'debuginfo'

# Same as release, but build binary with debug symbols (binary size will be ~ 1GB).
[profile.release-dbgsym]
inherits = "release"
split-debuginfo = 'off'
strip = 'none'

# Inherits from the release profile above.
[profile.bench]
# For convenience.
strip = 'none'

[profile.test.package.move-compiler]
# opt-level 2 for move-compiler reduces the size of some of its
# (recursive) stack frames by up to 10x, avoiding stack overflows.
opt-level = 2

[profile.simulator]
debug = true
debug-assertions = true
inherits = "test"
# opt-level 1 gives >5x speedup for simulator tests without slowing down build times very much.
opt-level = 1
overflow-checks = true

[profile.dev-nodebug]
debug = 0
inherits = "simulator"

[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(msim)', 'cfg(fail_points)'] }

[workspace.lints.clippy]
redundant_clone = "warn"

# Dependencies that should be kept in sync through the whole workspace
[workspace.dependencies]
# external dependencies
# anemo dependencies
anemo = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anemo-build = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anemo-tower = { git = "https://github.com/mystenlabs/anemo.git", rev = "c4e7e4cb4b624d7738c2016d7b7885c6774ff9c2" }
anyhow = "1.0.71"
arc-swap = { version = "1.7.1", features = ["serde"] }
async-graphql = { version = "7.1.0", default-features = false }
async-recursion = "1.0.4"
async-stream = "0.3.6"
async-trait = "0.1.61"
aws-config = { version = "1.8", default-features = false, features = ["credentials-process", "rt-tokio", "sso"] }
aws-sdk-dynamodb = { version = "1.103", default-features = false, features = ["rustls", "rt-tokio"] }
axum = { version = "0.8", default-features = false, features = ["tokio", "http2", "json", "matched-path", "original-uri", "form", "query", "ws", "macros"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-server = { version = "0.8", default-features = false, features = ["tls-rustls-no-provider"] }
backoff = { version = "0.4.0", features = ["futures", "futures-core", "pin-project-lite", "tokio", "tokio_1"] }
base64 = "0.21.2"
base64-url = "2"
bcs = "0.1.4"
better_any = "0.1.1"
bincode = "1.3.3"
bip32 = "0.5"
bitflags = { version = "2.10.0", default-features = false }
byteorder = "1.4.3"
bytes = { version = "1.5.0", features = ["serde"] }
cached = "0.43.0"
camino = "1.1.1"
cfg-if = "1.0.0"
chrono = { version = "0.4.41", features = ["clock", "serde"] }
clap = { version = "4.4", features = ["derive", "wrap_help"] }
codespan-reporting = "0.11.1"
colored = "2.0.0"
comfy-table = "6.1.3"
const-str = "0.5.3"
coset = "0.3"
criterion = { version = "0.5.0", features = ["async", "async_tokio", "html_reports"] }
crossterm = "0.25.0"
csv = "1.2.1"
dashmap = "5.5.3"
datatest-stable = { git = "https://github.com/nextest-rs/datatest-stable.git", rev = "72db7f6d1bbe36a5407e96b9488a581f763e106f" }
derive_more = { version = "1.0", default-features = false }
diesel = "2.3.5"
diffy = { version = "0.3" }
dirs = "5.0"
downcast = "0.11.0"
duration-str = "0.5.0"
ed25519-consensus = { version = "2.0.1", features = ["serde"] }
either = "1.8.0"
enum_dispatch = "^0.3"
expect-test = "1.4.0"
eyre = "0.6.8"
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-vdf = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", features = ["experimental"] }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }
flate2 = "1.0.28"
fs_extra = "1.3.0"
futures = "0.3.28"
getset = "0.1"
git-version = "0.3.5"
hdrhistogram = "7.5.1"
hex = "0.4.3"
http = "1"
http-body = "1.0"
http-body-util = "0.1.2"
humantime = "2.1.0"
hyper = "1"
hyper-util = { version = "0.1.20", features = ["tokio", "server-auto", "service"] }
im = "15"
indexmap = { version = "2.11.0", features = ["serde"] }
indicatif = "0.18.3"
insta = { version = "1.21.1", features = ["redactions", "yaml", "json"] }
integer-encoding = "3.0.1"
itertools = "0.13.0"
json_to_table = { git = "https://github.com/zhiburt/tabled/", rev = "e449317a1c02eb6b29e409ad6617e5d9eb7b3bd4" }
jsonrpsee = { version = "0.24", features = ["server", "macros", "client", "ws-client", "http-client"] }
lru = "0.12"
mime = "0.3"
mockall = "0.11.4"
moka = { version = "0.12.12", default-features = false, features = ["sync"] }
more-asserts = "0.3.1"
msim = { git = "https://github.com/iotaledger/iota-sim.git", branch = "tokio-1.49.0", package = "msim" }
multiaddr = "0.17.0"
nom = "7.1.3"
nonempty = "0.9.0"
num-bigint = "0.4.4"
num_cpus = "1.15.0"
num_enum = "0.7"
object_store = { version = "0.13", features = ["aws", "gcp", "azure", "http"] }
once_cell = "1.18.0"
p256 = { version = "0.13.2", features = ["ecdsa"] }
packable = { version = "0.8.3", features = ["io"], default-features = false }
parking_lot = { version = "0.12.3", features = ["arc_lock"] }
passkey-authenticator = "0.4.0"
passkey-client = "0.4.0"
passkey-types = "0.4.0"
petgraph = { version = ">=0.6, <=0.7", default-features = false }
pin-project-lite = "0.2.15"
prefix-hex = { version = "0.7.1", default-features = false }
pretty_assertions = { version = "1.4.0" }
primitive-types = { version = "0.12.2", default-features = false }
proc-macro2 = "1.0.95"
prometheus = "0.14.0"
proptest = "1.6.0"
proptest-derive = "0.5.1"
prost = "0.14"
prost-types = "0.14"
quote = "1.0.23"
rand = "0.8.5"
regex = "1.7.1"
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
roaring = "0.11.2"
rs_merkle = "1.5.0"
rstest = "0.16.0"
rustls = { version = "0.23.18", default-features = false, features = ["std", "tls12", "ring"] }
schemars = { version = "0.8.21", features = ["either"] }
scopeguard = "1.1"
serde = { version = "1.0.144", features = ["derive", "rc"] }
serde-reflection = "0.5"
serde_json = { version = "1.0.149", features = ["preserve_order"] }
serde_spanned = "0.6.8"
serde_with = "3.8"
serde_yaml = "0.8.26"
serial_test = "2.0.0"
shellexpand = "3.1.0"
# datatest-stable = "0.1.2"
signature = "1.6.0"
snap = "1.1.0"
static_assertions = "1.1.0"
strum = { version = "0.27.1", features = ["derive"] }
strum_macros = "0.27.1"
syn = { version = "1.0.104", features = ["full", "derive", "extra-traits"] }
sysinfo = "^0.33"
tabled = { version = "0.12" }
tap = "1.0.1"
tempfile = "3.20.0"
test-fuzz = "3.0.4"
thiserror = "1.0.40"
# tokio is defined at a specific version to support patching with iota-sim
# Do not upgrade without updating https://github.com/iotaledger/iota-sim first
tokio = "1.49.0"
tokio-rustls = { version = "0.26", default-features = false, features = ["tls12", "ring"] }
tokio-stream = { version = "0.1.17", features = ["sync", "net"] }
tokio-util = "0.7.17"
toml = { version = "0.7.4", features = ["preserve_order"] }
tonic = { version = "0.14", features = ["zstd", "transport"] }
tonic-build = "0.14"
tonic-health = "0.14"
tonic-prost = "0.14"
tonic-rustls = "0.3.0"
tower = { version = "0.4.12", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.5", features = ["cors", "timeout", "trace", "set-header", "propagate-header"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", default-features = false, features = ["std", "smallvec", "fmt", "ansi", "time", "json", "registry", "env-filter"] }
url = "2.3.1"
uuid = { version = "1.1.2", features = ["v4", "fast-rng"] }

# internal dependencies
bin-version = { path = "crates/bin-version" }
consensus-config = { path = "consensus/config" }
consensus-core = { path = "consensus/core" }
consensus-simtests = { path = "consensus/simtests" }
iota = { path = "crates/iota" }
iota-adapter-transactional-tests = { path = "crates/iota-adapter-transactional-tests" }
iota-analytics-indexer = { path = "crates/iota-analytics-indexer" }
iota-analytics-indexer-derive = { path = "crates/iota-analytics-indexer-derive" }
iota-archival = { path = "crates/iota-archival" }
iota-authority-aggregation = { path = "crates/iota-authority-aggregation" }
iota-benchmark = { path = "crates/iota-benchmark" }
iota-build-cache-server = { path = "crates/iota-build-cache-server" }
iota-cluster-test = { path = "crates/iota-cluster-test" }
iota-common = { path = "crates/iota-common", default-features = false }
iota-config = { path = "crates/iota-config" }
iota-core = { path = "crates/iota-core" }
iota-cost = { path = "crates/iota-cost" }
iota-data-ingestion = { path = "crates/iota-data-ingestion" }
iota-data-ingestion-core = { path = "crates/iota-data-ingestion-core" }
iota-e2e-tests = { path = "crates/iota-e2e-tests" }
iota-enum-compat-util = { path = "crates/iota-enum-compat-util" }
iota-execution = { path = "iota-execution" }
iota-faucet = { path = "crates/iota-faucet" }
iota-framework = { path = "crates/iota-framework" }
iota-framework-snapshot = { path = "crates/iota-framework-snapshot" }
iota-framework-tests = { path = "crates/iota-framework-tests" }
iota-genesis-builder = { path = "crates/iota-genesis-builder" }
iota-genesis-common = { path = "crates/iota-genesis-common" }
iota-graphql-config = { path = "crates/iota-graphql-config" }
iota-graphql-rpc = { path = "crates/iota-graphql-rpc" }
iota-graphql-rpc-client = { path = "crates/iota-graphql-rpc-client" }
iota-graphql-rpc-headers = { path = "crates/iota-graphql-rpc-headers" }
iota-grpc-client = { path = "crates/iota-grpc-client" }
iota-grpc-server = { path = "crates/iota-grpc-server" }
iota-grpc-types = { path = "crates/iota-grpc-types" }
iota-http = { path = "crates/iota-http" }
iota-indexer = { path = "crates/iota-indexer" }
iota-indexer-builder = { path = "crates/iota-indexer-builder" }
iota-indexer-streaming = { path = "crates/iota-indexer-streaming" }
iota-json = { path = "crates/iota-json" }
iota-json-rpc = { path = "crates/iota-json-rpc" }
iota-json-rpc-api = { path = "crates/iota-json-rpc-api" }
iota-json-rpc-types = { path = "crates/iota-json-rpc-types" }
iota-keys = { path = "crates/iota-keys" }
iota-kvstore = { path = "crates/iota-kvstore" }
iota-ledger = { path = "crates/iota-ledger" }
iota-ledger-signer = { path = "crates/iota-ledger-signer" }
iota-localnet = { path = "crates/iota-localnet" }
iota-macros = { path = "crates/iota-macros" }
iota-mainnet-unlocks = { path = "crates/iota-mainnet-unlocks" }
iota-metric-checker = { path = "crates/iota-metric-checker" }
iota-metrics = { path = "crates/iota-metrics" }
iota-move = { path = "crates/iota-move" }
iota-move-build = { path = "crates/iota-move-build" }
iota-move-lsp = { path = "crates/iota-move-lsp" }
iota-names = { path = "crates/iota-names" }
iota-network = { path = "crates/iota-network" }
iota-network-stack = { path = "crates/iota-network-stack" }
iota-node = { path = "crates/iota-node" }
iota-open-rpc = { path = "crates/iota-open-rpc" }
iota-open-rpc-macros = { path = "crates/iota-open-rpc-macros" }
iota-package-dump = { path = "crates/iota-package-dump" }
iota-package-management = { path = "crates/iota-package-management" }
iota-package-resolver = { path = "crates/iota-package-resolver" }
iota-proc-macros = { path = "crates/iota-proc-macros" }
iota-proto-build = { path = "crates/iota-proto-build" }
iota-protocol-config = { path = "crates/iota-protocol-config" }
iota-protocol-config-macros = { path = "crates/iota-protocol-config-macros" }
iota-replay = { path = "crates/iota-replay" }
iota-rest-api = { path = "crates/iota-rest-api" }
iota-rest-kv = { path = "crates/iota-rest-kv" }
iota-rpc-loadgen = { path = "crates/iota-rpc-loadgen" }
iota-sdk = { path = "crates/iota-sdk" }
iota-sdk-types = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "e19c78a1bee17e0bf85fcd5b16a2f080cef26274", features = ["hash", "serde", "schemars"] }
iota-simulator = { path = "crates/iota-simulator" }
iota-snapshot = { path = "crates/iota-snapshot" }
iota-source-validation = { path = "crates/iota-source-validation" }
iota-source-validation-service = { path = "crates/iota-source-validation-service" }
iota-stardust-types = { path = "crates/iota-stardust-types" }
iota-storage = { path = "crates/iota-storage" }
iota-surfer = { path = "crates/iota-surfer" }
iota-swarm = { path = "crates/iota-swarm" }
iota-swarm-config = { path = "crates/iota-swarm-config" }
iota-synthetic-ingestion = { path = "crates/iota-synthetic-ingestion" }
iota-test-transaction-builder = { path = "crates/iota-test-transaction-builder" }
iota-tls = { path = "crates/iota-tls" }
iota-tool = { path = "crates/iota-tool" }
iota-transaction-builder = { path = "crates/iota-transaction-builder" }
iota-transaction-checks = { path = "crates/iota-transaction-checks" }
iota-transactional-test-runner = { path = "crates/iota-transactional-test-runner" }
iota-types = { path = "crates/iota-types" }
iota-upgrade-compatibility-transactional-tests = { path = "crates/iota-upgrade-compatibility-transactional-tests" }
iota-verifier-transactional-tests = { path = "crates/iota-verifier-transactional-tests" }
move-abstract-interpreter = { path = "external-crates/move/crates/move-abstract-interpreter" }
move-abstract-stack = { path = "external-crates/move/crates/move-abstract-stack" }
move-analyzer = { path = "external-crates/move/crates/move-analyzer" }
move-binary-format = { path = "external-crates/move/crates/move-binary-format" }
move-bytecode-source-map = { path = "external-crates/move/crates/move-bytecode-source-map" }
move-bytecode-utils = { path = "external-crates/move/crates/move-bytecode-utils" }
move-bytecode-verifier-meter = { path = "external-crates/move/crates/move-bytecode-verifier-meter" }
move-cli = { path = "external-crates/move/crates/move-cli" }
move-command-line-common = { path = "external-crates/move/crates/move-command-line-common" }
move-compiler = { path = "external-crates/move/crates/move-compiler" }
move-core-types = { path = "external-crates/move/crates/move-core-types" }
move-disassembler = { path = "external-crates/move/crates/move-disassembler" }
move-ir-types = { path = "external-crates/move/crates/move-ir-types" }
move-package = { path = "external-crates/move/crates/move-package" }
move-package-alt = { path = "external-crates/move/crates/move-package-alt" }
move-stackless-bytecode = { path = "external-crates/move/crates/move-stackless-bytecode" }
move-symbol-pool = { path = "external-crates/move/crates/move-symbol-pool" }
move-trace-format = { path = "external-crates/move/crates/move-trace-format" }
move-transactional-test-runner = { path = "external-crates/move/crates/move-transactional-test-runner" }
move-unit-test = { path = "external-crates/move/crates/move-unit-test" }
move-vm-config = { path = "external-crates/move/crates/move-vm-config" }
move-vm-profiler = { path = "external-crates/move/crates/move-vm-profiler" }
move-vm-test-utils = { path = "external-crates/move/crates/move-vm-test-utils/", features = ["tiered-gas"] }
prometheus-closure-metric = { path = "crates/prometheus-closure-metric" }
simulacrum = { path = "crates/simulacrum" }
simulacrum-server = { path = "crates/simulacrum-server" }
starfish-config = { path = "crates/starfish/config" }
starfish-core = { path = "crates/starfish/core" }
starfish-simtests = { path = "crates/starfish/simtests" }
telemetry-subscribers = { path = "crates/telemetry-subscribers" }
test-cluster = { path = "crates/test-cluster" }
transaction-fuzzer = { path = "crates/transaction-fuzzer" }
typed-store = { path = "crates/typed-store" }
typed-store-derive = { path = "crates/typed-store-derive" }
typed-store-error = { path = "crates/typed-store-error" }
