[package]
name = "iota-aws-orchestrator"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
async-trait.workspace = true
aws-config.workspace = true
aws-runtime = "1.5"
aws-sdk-ec2 = { version = "1", default-features = false, features = ["rustls", "rt-tokio"] }
aws-smithy-runtime-api = "1.11"
chrono.workspace = true
clap.workspace = true
color-eyre = "0.6"
crossterm.workspace = true
duration-str.workspace = true
eyre.workspace = true
futures.workspace = true
prettytable-rs = "0.10"
prometheus-parse = "0.2"
rand.workspace = true
reqwest.workspace = true
russh = { version = "0.57", default-features = false, features = ["ring", "rsa", "flate2"] }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["full"] }
tracing.workspace = true
tracing-subscriber.workspace = true

# internal dependencies
iota-benchmark.workspace = true
iota-build-cache-server.workspace = true
iota-config.workspace = true
iota-metrics.workspace = true
iota-swarm-config.workspace = true
iota-types.workspace = true

[dev-dependencies]
tempfile.workspace = true

[[bin]]
name = "iota-aws-orchestrator"
path = "src/main.rs"

[package.metadata.cargo-machete]
ignored = [
  "prettytable-rs", # library name is different than crate name
]

[lints]
workspace = true
