[package]
name = "iota-data-ingestion"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-trait.workspace = true
aws-config.workspace = true
aws-sdk-dynamodb.workspace = true
backoff.workspace = true
base64-url.workspace = true
bcs.workspace = true
byteorder.workspace = true
bytes.workspace = true
futures.workspace = true
object_store.workspace = true
prometheus.workspace = true
serde.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-util.workspace = true
tracing.workspace = true

# internal dependencies
iota-archival.workspace = true
iota-config.workspace = true
iota-data-ingestion-core.workspace = true
iota-kvstore.workspace = true
iota-metrics.workspace = true
iota-rest-api.workspace = true
iota-storage.workspace = true
iota-types.workspace = true
telemetry-subscribers.workspace = true

[dev-dependencies]
tempfile.workspace = true
