[package]
name = "iota-genesis-builder"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
bcs.workspace = true
bigdecimal = "0.4"
camino.workspace = true
clap.workspace = true
csv.workspace = true
fastcrypto.workspace = true
flate2.workspace = true
hex.workspace = true
itertools.workspace = true
num-rational.workspace = true
packable.workspace = true
prefix-hex.workspace = true
primitive-types.workspace = true
prometheus.workspace = true
rand = { workspace = true, features = ["std_rng"] }
rand_pcg = "0.3"
rand_seeder = "0.3"
regex.workspace = true
reqwest.workspace = true
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde_yaml.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

# internal dependencies
iota-adapter-latest = { path = "../../iota-execution/latest/iota-adapter/" }
iota-config.workspace = true
iota-execution.workspace = true
iota-framework.workspace = true
iota-framework-snapshot.workspace = true
iota-genesis-common.workspace = true
iota-move-build.workspace = true
iota-move-natives-latest = { path = "../../iota-execution/latest/iota-move-natives" }
iota-protocol-config.workspace = true
iota-sdk-types.workspace = true
iota-stardust-types = { path = "../iota-stardust-types", features = ["irc_27", "irc_30", "std"] }
iota-types.workspace = true
move-binary-format.workspace = true
move-compiler.workspace = true
move-core-types.workspace = true
move-package.workspace = true
move-vm-runtime-latest = { path = "../../external-crates/move/crates/move-vm-runtime", package = "move-vm-runtime" }

[target.'cfg(msim)'.dependencies]
iota-simulator.workspace = true

[dev-dependencies]
# external dependencies
tempfile.workspace = true
tokio = { workspace = true, features = ["macros"] }

# internal dependencies
iota-swarm-config.workspace = true

[features]
test-outputs = ["dep:iota-sdk-crypto"]

[target.'cfg(not(msim))'.dependencies]
# iota-sdk-crypto is only used when compiling test-outputs feature
iota-sdk-crypto = { git = "https://github.com/iotaledger/iota-rust-sdk.git", rev = "d8cdab6ab3f2fd9ba8059ba56e80ba950badc88d", optional = true, features = ["ed25519", "mnemonic"] }

[[example]]
name = "snapshot_add_test_outputs"
path = "examples/snapshot_add_test_outputs.rs"
required-features = ["test-outputs"]

[[example]]
name = "snapshot_only_test_outputs"
path = "examples/snapshot_only_test_outputs.rs"
required-features = ["test-outputs"]
