[package]
name = "iota-graphql-rpc"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[dependencies]
# external dependencies
anyhow.workspace = true
async-graphql = { workspace = true, features = ["dataloader", "apollo_tracing", "tracing", "opentelemetry", "graphiql"] }
async-graphql-axum = "7.1.0"
async-graphql-value = "7.1.0"
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
# TODO: put these behind feature flag to prevent leakage
# Used for dummy data
bcs.workspace = true
chrono.workspace = true
clap.workspace = true
const-str.workspace = true
diesel = { workspace = true, features = ["i-implement-a-third-party-backend-and-opt-into-breaking-changes"] }
downcast.workspace = true
fastcrypto = { workspace = true, features = ["copy_key"] }
fastcrypto-zkp.workspace = true
futures.workspace = true
hex.workspace = true
http.workspace = true
http-body-util.workspace = true
hyper.workspace = true
im.workspace = true
once_cell.workspace = true
prometheus.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
tokio-util = { workspace = true, features = ["rt"] }
toml.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true

# internal dependencies
bin-version.workspace = true
iota-graphql-config.workspace = true
iota-graphql-rpc-client.workspace = true
iota-graphql-rpc-headers.workspace = true
iota-grpc-client.workspace = true
iota-grpc-server.workspace = true
iota-indexer.workspace = true
iota-indexer-streaming.workspace = true
iota-json.workspace = true
iota-json-rpc.workspace = true
iota-json-rpc-api.workspace = true
iota-json-rpc-types.workspace = true
iota-metrics.workspace = true
iota-names.workspace = true
iota-network-stack.workspace = true
iota-node-storage.workspace = true
iota-package-resolver.workspace = true
iota-protocol-config.workspace = true
iota-sdk-types.workspace = true
iota-swarm-config.workspace = true
iota-types.workspace = true
move-binary-format.workspace = true
move-core-types.workspace = true
move-disassembler.workspace = true
move-ir-types.workspace = true
telemetry-subscribers.workspace = true
test-cluster.workspace = true

[dev-dependencies]
# external dependencies
expect-test.workspace = true
hyper.workspace = true
insta.workspace = true
rand.workspace = true
serde_json.workspace = true
serial_test.workspace = true
tower.workspace = true

# internal dependencies
iota-framework.workspace = true
iota-test-transaction-builder.workspace = true
simulacrum.workspace = true

[features]
pg_integration = ["iota-indexer/pg_integration"]

[package.metadata.cargo-udeps.ignore]
development = ["serial_test", "simulacrum"]

[package.metadata.cargo-machete]
ignored = [
  "downcast", # imported through a declarative macro
]

[lints]
workspace = true
