[package]
name = "iota-grpc-api"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
anyhow.workspace = true
async-stream = "0.3"
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread"] }
tokio-stream.workspace = true
tokio-util.workspace = true
tonic.workspace = true
tracing.workspace = true

# internal dependencies
iota-config.workspace = true
iota-grpc-types.workspace = true
iota-json-rpc-types.workspace = true
iota-types.workspace = true
move-core-types.workspace = true

[dev-dependencies]
test-cluster.workspace = true
