[package]
name = "iota-grpc-client"
version.workspace = true
authors = ["IOTA Foundation <info@iota.org>"]
edition = "2021"
license = "Apache-2.0"
publish = false

[lints]
workspace = true

[dependencies]
# external dependencies
base64.workspace = true
http.workspace = true
serde.workspace = true
thiserror.workspace = true
tonic = { workspace = true, features = ["tls-ring"] }

# internal dependencies
iota-grpc-types.workspace = true
iota-sdk-types.workspace = true
